--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Login from "../components/Login";
+import Dashboard from "../components/Dashboard";
 import "../styles/global.css";
 ---
 <html lang="es">
@@ -8,6 +8,6 @@ import "../styles/global.css";
     <title>Fabrika</title>
   </head>
   <body class="bg-gray-100 p-6">
-  <Login client:load />
+  <Dashboard client:load />
   </body>
 </html>
