--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Dashboard from "../components/Dashboard";
+import Login from "../components/Login";
 import "../styles/global.css";
 ---
 <html lang="es">
@@ -8,6 +9,6 @@ import "../styles/global.css";
     <title>Fabrika</title>
   </head>
   <body class="bg-gray-100 p-6">
-  <Dashboard client:load />
+  <Login client:load />
   </body>
 </html>
