--- a/src/pages/admin.astro
+++ b/src/pages/admin.astro
@@ -1,5 +1,5 @@
 ---
-import Login from "../components/Login";
+import Dashboard from "../components/Dashboard";
 import "../styles/global.css";
 ---
 
@@ -9,10 +9,9 @@ import "../styles/global.css";
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>Fabrika - Login</title>
+    <title>Fabrika - Dashboard</title>
   </head>
   <body>
-    <Login client:visible/>
+    <Dashboard client:only="react" />
   </body>
 </html>
-
