--- a/src/pages/dasboardadmin/admin.astro
+++ b/src/pages/dasboardadmin/admin.astro
@@ -1,6 +1,6 @@
 ---
-import Dashboard from "../components/Dashboard";
-import "../styles/global.css";
+import Dashboard from "../../components/Dashboard";
+import "../../styles/global.css";
 ---
 
 <html lang="es">
